--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,6 +5,157 @@
 	scroll-behavior: smooth;
 }
 
+
+@keyframes slide {
+	0% {
+		background-position: 0 0;
+	}
+
+	100% {
+		background-position: -120px 60px;
+	}
+}
+
+#InfoBanner {
+	margin-bottom: 10px;
+	position: fixed;
+	left: -40%;
+	top: 2%;
+	text-align: center;
+	width: 100%;
+}
+
+#InfoBanner:hover {
+	cursor: pointer;
+}
+
+.reversed {
+	display: inline-block;
+	padding: 0.3em;
+	padding-left: 0.3em;
+	margin-left: 0.8em;
+	position: relative;
+	text-align: center;
+	vertical-align: middle;
+	line-height: 1;
+	color: rgb(255, 255, 255);
+	font-size: 15px;
+	background-color: #455d9a;
+}
+
+.reversed:before,
+.reversed:after {
+	content: '';
+	width: 0;
+	height: 0;
+	right: -0.8em;
+	position: absolute;
+	top: 0;
+	border-top: 0.8em solid #455d9a;
+}
+
+.reversed:after {
+	top: auto;
+	bottom: 0;
+	border-top: none;
+	border-bottom: 0.8em solid #455d9a;
+}
+
+.reversedRight:before,
+.reversedRight:after {
+	border-right: 0.8em solid transparent;
+	right: -0.8em;
+}
+
+.reversedRight {
+	width: 17px;
+	border-radius: 5px 0px 0px 5px;
+	animation: tilt 2s infinite;
+}
+
+@keyframes tilt {
+	0% {
+		left: 0%;
+	}
+
+	50% {
+		left: 9px;
+	}
+
+	100% {
+		left: 0px;
+	}
+}
+
+.reversedLeft {
+	margin-left: 15px;
+	border-radius: 0px 5px 5px 0px;
+}
+
+.reversedLeft:before,
+.reversedLeft:after {
+	content: '';
+	width: 0;
+	height: 0;
+	border-left: 0.8em solid transparent;
+	left: -0.8em;
+	position: absolute;
+}
+
+.reversedLeft:after {
+	top: auto;
+	bottom: 0;
+	border-top: 0.8em solid #455d9a;
+	border-bottom: none;
+}
+
+.reversedLeft:before {
+	bottom: auto;
+	top: 0;
+	border-bottom: 0.8em solid #455d9a;
+	border-top: none;
+}
+
+.bgAnimation {
+	background-color: #455d9a;
+	background-image: linear-gradient(45deg,
+			#455d9a 25%,
+			transparent 25%,
+			transparent 75%,
+			#455d9a 75%,
+			#455d9a), linear-gradient(-45deg,
+			#455d9a 25%,
+			transparent 25%,
+			transparent 75%,
+			#455d9a 75%,
+			#455d9a);
+	background-size: 60px 60px;
+	animation: slide 4s infinite linear;
+}
+
+.workinprogress {
+	text-align: center;
+}
+
+.workinprogress .underline-on-hover {
+	color: #b52b00;
+}
+
+.workinprogress .underline-on-hover {
+	background: linear-gradient(currentColor 0 0) bottom left/ var(--underline-width, 0%) 0.1em no-repeat;
+	/* color: #f80; */
+	display: inline-block;
+	padding: 0 .5em 0.2em;
+	text-decoration: none;
+	transition: background-size 0.5s;
+}
+
+.workinprogress .underline-on-hover:hover {
+	color: #1d47b3;
+	--underline-width: 100%;
+}
+
+
 html,
 body,
 div,
@@ -2941,7 +3092,7 @@ input[type="button"]:disabled,
 	text-rendering: auto;
 	line-height: 1;
 	text-transform: none !important;
-	font-family: 'Roboto Slab', serif;
+	font-family: 'Font Awesome 5 Free';
 	font-weight: 900;
 }
 
@@ -2990,7 +3141,7 @@ input[type="button"]:disabled,
 	text-rendering: auto;
 	line-height: 1;
 	text-transform: none !important;
-	font-family: 'Roboto Slab', serif;
+	font-family: 'Font Awesome 5 Free';
 	font-weight: 900;
 }
 
@@ -3053,7 +3204,7 @@ input[type="button"]:disabled,
 	text-rendering: auto;
 	line-height: 1;
 	text-transform: none !important;
-	font-family: 'Roboto Slab', serif;
+	font-family: 'Font Awesome 5 Free';
 	;
 	font-weight: 900;
 }
