--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2869,7 +2869,7 @@ input[type="button"]:disabled,
 	background-image: url("../../images/bg1.png");
 	background-position: top left, top right;
 	background-repeat: repeat-x, no-repeat;
-	background-size: auto, 150%;
+	background-size: cover, 150%;
 	color: rgba(255, 255, 255, 0.5);
 	height: 100%;
 	left: 0;
